# ML-Pipeline-with-CI-CD-Drift-Monitoring

./: .dockerignore  .env.example  .gitignore  NOTES.md  README.md  RESULTS.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-serving.txt  requirements.txt
.github/workflows/: ci.yml
dags/: churn_retrain_dag.py
docker/airflow/: Dockerfile
eval/results/: drift_report.json  load_test.json  load_test_raw.txt  monitoring_verification.json  retrain_loop.json  training_metrics.json
gx/expectations/: churn_raw_suite.json
monitoring/: alert_rules.yml  alert_webhook.py  alertmanager.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: churn-serving.json  provider.yml
monitoring/grafana/provisioning/datasources/: prometheus.yml
serving/: Dockerfile  __init__.py  app.py  model_loader.py  schemas.py  shadow.py
serving/model/: model.joblib
src/: __init__.py  config.py  data.py  drift.py  features.py  model_resolver.py  register_dagshub.py  retrain.py  simulate_drift.py  train.py  validate.py  verify_registry.py
tests/: conftest.py  test_api.py  test_data.py  test_drift.py  test_features.py  test_retrain.py  test_shadow.py  test_validate.py
tests/fixtures/: sample.csv
